--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <title>Савченко Екатерина</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="home">
     <div class="menu--1">
         <div class="menu cross">
             <label>
