--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <title>Савченко Екатерина</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="home">
+<body id="home">
     <div class="menu--1">
         <div class="menu cross">
             <label>
@@ -120,7 +120,7 @@
                 <a href="index.html" class="item active">Главная</a>
                 <a href="#" class="item">Тренировки</a>
                 <a href="#" class="item">Марафон
-                <a href="#" class="item">Фотография</a>
+                <a href="photograph.html" class="item">Фотография</a>
                 <a href="#" class="item">Туры</a>
             </ul>
         </nav>
