--- a/html/photograph.html
+++ b/html/photograph.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Фото-портфолио</title>
 </head>
-<body>
+<body id="photograph">
     <div class="menu--1">
         <div class="menu cross">
             <label>
@@ -119,8 +119,8 @@
                 <a href="index.html" class="item active">Главная</a>
                 <a href="#" class="item">Тренировки</a>
                 <a href="#" class="item">Марафон
-                    <a href="#" class="item">Фотография</a>
-                    <a href="#" class="item">Туры</a>
+                <a href="photograph.html" class="item">Фотография</a>
+                <a href="#" class="item">Туры</a>
             </ul>
         </nav>
     </div>
@@ -138,6 +138,14 @@
         </a>
     </div>
     <section class="photoPackage">
+        <div class="arrowBoxPhoto">
+            <div>
+                <div class="arrowLeftLeft" id="arLL">❮</div>
+                <div class="arrowLeft" id="arL">❮</div>
+                <div class="arrowRightRight" id="arRR"> ❯ </div>
+                <div class="arrowRight" id="arR"> ❯ </div>
+            </div>
+        </div>
         <div class="itemPhoto default" data-number="0">
             <div class="smallBox">
                 <div class="contentPhoto">
