finish photo and new trining

--- a/html/photograph.html
+++ b/html/photograph.html
@@ -16,7 +16,7 @@
                 </svg>
             </label>
         </div>
-        <nav>
+        <nav class="dark">
             <ul class="nav">
                 <!--<a href="index.html" class="logoNav">-->
                 <!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"-->
@@ -149,21 +149,32 @@
         <div class="itemPhoto default" data-number="0">
             <div class="smallBox">
                 <div class="contentPhoto">
-                    <h2 class='photoTitle'>Стандарт</h2>
-                    <p>
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
-                    </p>
+                    <h2 class='photoTitle'>УЛИЧНЫЕ ФОТОСЕССИИ</h2>
+                    <div class="contentPhotoBody">
+                        <p><span class="accentP"> От 50 </span>обработанных фотографий (цвето и свето коррекция, кадрирование)<br/> и <span class="accentP"> 5 </span>
+                            выбранных вами фото - детальная ретушь.</p>
+                        <p>Тематика любая, Love Story, прогулка, репортаж и т.д.</p>
+                        <p>Помощь с выбором студии, образа и позировании.</p>
+                        <div class="pricePhoto"><span>Стоимость 1 часа - </span> 2500р</div>
+                        <div class="pricePhoto"><span>Стоимость от 2 часов - </span> 2000р</div>
+                        <div class="showPhoto">Посмотреть фото</div>
+                    </div>
                 </div>
-                <img src="../img/1.jpg" alt="">
+                <img src="../img/photo/1.jpg" alt="">
             </div>
         </div>
         <div class="itemPhoto premium active" data-number="1">
             <div class="smallBox">
                 <div class="contentPhoto">
-                    <h2 class='photoTitle'>Премиум</h2>
-                    <p>
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
-                    </p>
+                    <h2 class='photoTitle'>СТУДИЙНАЯ ФОТО</h2>
+                    <div class="contentPhotoBody">
+                        <p><span class="accentP"> От 50 </span>обработанных фотографий (цвето и свето коррекция, кадрирование)<br/> и <span class="accentP"> 5 </span>
+                            выбранных вами фото - детальная ретушь.</p>
+                        <p>Помощь с выбором студии, образа и позировании.</p>
+                        <div class="pricePhoto"><span>Стоимость 1 часа - </span> 2500р <span> + аренда фотостудии</span></div>
+                        <div class="pricePhoto"><span>Стоимость от 2 часов - </span> 2000р <span> + аренда фотостудии</span></div>
+                        <div class="showPhoto">Посмотреть фото</div>
+                    </div>
                 </div>
                 <img id="imgPhotoCenter" src="../img/2.jpg" alt="">
             </div>
@@ -171,14 +182,75 @@
         <div class="itemPhoto gold" data-number="2">
             <div class="smallBox">
                 <div class="contentPhoto">
-                    <h2 class='photoTitle'>Голд</h2>
-                    <p>
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
-                    </p>
+                    <h2 class='photoTitle'>НЕОНОВАЯ ФОТО</h2>
+                    <div class="contentPhotoBody">
+                        <p><span class="accentP"> От 50 </span>обработанных фотографий (цвето и свето коррекция, кадрирование)<br/> и <span class="accentP"> 5 </span>
+                            выбранных вами фото - детальная ретушь.</p>
+                        <p>Часовая сьемка в вечернее время на улице, либо студия в любое время</p>
+                        <p>Помощь с выбором студии, образа и позировании.</p>
+                        <div class="pricePhoto"><span>Стоимость 1 часа на улице - </span> 2000р</div>
+                        <div class="pricePhoto"><span>Стоимость 1 часов в студии - </span> 3000р <span> + аренда фотостудии</span></div>
+                        <div class="showPhoto">Посмотреть фото</div>
+                    </div>
                 </div>
-                <img src="../img/3.jpg" alt="" >
+                <img src="../img/photo/neon/2.jpg" alt="" >
             </div>
         </div>
     </section>
+    <section>
+        <div class="streetPhoto">
+            <h2 class="title">Уличная фотосессия</h2>
+            <div class="photoBox">
+                <div class="item"><img src="../img/photo/street/1.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/3.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/4.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/15.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/11.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/5.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/6.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/12.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/9.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/street/я.jpg" alt=""></div>
+                <!--<div class="item"><img src="../img/photo/street/13.jpg" alt=""></div>-->
+                <!--<div class="item"><img src="../img/photo/street/10.jpg" alt=""></div>-->
+                <!--<div class="item"><img src="../img/photo/street/15.jpg" alt=""></div>-->
+            </div>
+        </div>
+        <div class="streetPhoto">
+            <h2 class="title">Студийная фотосессия</h2>
+            <div class="photoBox">
+                <div class="item"><img src="../img/photo/studio/1.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/4.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/11.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/3.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/12.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/7.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/6.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/9.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/10.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/13.jpg" alt=""></div>
+            </div>
+        </div>
+        <div class="streetPhoto">
+            <h2 class="title">Неоновая фотосессия</h2>
+            <div class="photoBox">
+                <div class="item"><img src="../img/photo/neon/1.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/2.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/8.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/3.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/6.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/9.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/10.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/4.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/5.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/12.jpg" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <div class="modalPhoto">
+        <!--<div class="modalImgBox">-->
+            <img class="modalImg" draggable="true" src="../img/photo/neon/1.jpg" alt="">
+        <!--</div>-->
+    </div>
 </body>
 </html>
