--- a/html/photograph.html
+++ b/html/photograph.html
@@ -125,7 +125,7 @@
         </nav>
     </div>
     <div class="linkHome">
-        <a href="tel:89990037029" style="color: #000" class="phone">8 999 003-70-29</a>
+        <a href="tel:89990037029" class="phone">8 999 003-70-29</a>
         <a target="_blank" href="https://www.instagram.com/catterino/?hl=ru">
             <svg class="svgInst" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
@@ -157,7 +157,7 @@
                         <p>Помощь с выбором студии, образа и позировании.</p>
                         <div class="pricePhoto"><span>Стоимость 1 часа - </span> 2500р</div>
                         <div class="pricePhoto"><span>Стоимость от 2 часов - </span> 2000р</div>
-                        <div class="showPhoto">Посмотреть фото</div>
+                        <div class="showPhoto" data-scroll="#street">Посмотреть фото</div>
                     </div>
                 </div>
                 <img src="../img/photo/1.jpg" alt="">
@@ -173,7 +173,7 @@
                         <p>Помощь с выбором студии, образа и позировании.</p>
                         <div class="pricePhoto"><span>Стоимость 1 часа - </span> 2500р <span> + аренда фотостудии</span></div>
                         <div class="pricePhoto"><span>Стоимость от 2 часов - </span> 2000р <span> + аренда фотостудии</span></div>
-                        <div class="showPhoto">Посмотреть фото</div>
+                        <div class="showPhoto" data-scroll="#studio">Посмотреть фото</div>
                     </div>
                 </div>
                 <img id="imgPhotoCenter" src="../img/2.jpg" alt="">
@@ -190,7 +190,7 @@
                         <p>Помощь с выбором студии, образа и позировании.</p>
                         <div class="pricePhoto"><span>Стоимость 1 часа на улице - </span> 2000р</div>
                         <div class="pricePhoto"><span>Стоимость 1 часов в студии - </span> 3000р <span> + аренда фотостудии</span></div>
-                        <div class="showPhoto">Посмотреть фото</div>
+                        <div class="showPhoto" data-scroll="#neon">Посмотреть фото</div>
                     </div>
                 </div>
                 <img src="../img/photo/neon/2.jpg" alt="" >
@@ -198,7 +198,37 @@
         </div>
     </section>
     <section>
-        <div class="streetPhoto">
+        <div class="streetPhoto" id="studio">
+            <h2 class="title">Студийная фотосессия</h2>
+            <div class="photoBox">
+                <div class="item"><img src="../img/photo/studio/1.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/4.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/11.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/3.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/12.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/7.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/6.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/9.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/10.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/studio/13.jpg" alt=""></div>
+            </div>
+        </div>
+        <div class="streetPhoto" id="neon">
+            <h2 class="title">Неоновая фотосессия</h2>
+            <div class="photoBox">
+                <div class="item"><img src="../img/photo/neon/1.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/2.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/8.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/3.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/6.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/9.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/10.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/4.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/5.jpg" alt=""></div>
+                <div class="item"><img src="../img/photo/neon/12.jpg" alt=""></div>
+            </div>
+        </div>
+        <div class="streetPhoto" id="street">
             <h2 class="title">Уличная фотосессия</h2>
             <div class="photoBox">
                 <div class="item"><img src="../img/photo/street/1.jpg" alt=""></div>
@@ -216,36 +246,7 @@
                 <!--<div class="item"><img src="../img/photo/street/15.jpg" alt=""></div>-->
             </div>
         </div>
-        <div class="streetPhoto">
-            <h2 class="title">Студийная фотосессия</h2>
-            <div class="photoBox">
-                <div class="item"><img src="../img/photo/studio/1.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/4.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/11.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/3.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/12.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/7.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/6.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/9.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/10.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/13.jpg" alt=""></div>
-            </div>
-        </div>
-        <div class="streetPhoto">
-            <h2 class="title">Неоновая фотосессия</h2>
-            <div class="photoBox">
-                <div class="item"><img src="../img/photo/neon/1.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/2.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/8.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/3.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/6.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/9.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/10.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/4.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/5.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/12.jpg" alt=""></div>
-            </div>
-        </div>
+
     </section>
     <div class="modalPhoto">
         <!--<div class="modalImgBox">-->
