--- a/html/training.html
+++ b/html/training.html
@@ -128,8 +128,10 @@
         <div class="item a">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <div class="title">Крепка спина здоровый позвоночник!</div>
+                <p class="text">Это комплексная физическая нагрузка, включающая упражнения, которые обеспечивают хорошее самочувствие и улучшение физического,
+                    умственного и социального благополучия
+                </p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
@@ -139,8 +141,9 @@
         <div class="item b">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <div class="title">Укрепление и подтяжка всего тела </div>
+                <p class="text">Вид силовой тренировки, проходящей в аэробном режиме, целью которой является развитие мышечной силы и создание
+                    мышечного рельефа.</p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
@@ -150,8 +153,9 @@
         <div class="item c">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <div class="title">Растянись и улыбнись!</div>
+                <p class="text">Тренировка направлена на улучшение гибкости и подвижности всего тела.</p>
+                <p class="text mt2"> Растяжка укрепляет и расслабляет мышцы одновременно, снимая ощущение зажатости. Человек с гибким и пластичными телом раскован в движениях и уверен в себе.</p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
@@ -161,8 +165,8 @@
         <div class="item d">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <div class="title">Для начинающих </div>
+                <p class="text">Танец на пилоне или, привычнее, танец на шесте. Со стриптизом, кроме самого шеста, в нем нет ничего общего. </p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
@@ -172,8 +176,8 @@
         <div class="item e">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <div class="title">Эффектные парные акробатические элементы</div>
+                <p class="text">Акройога — это направление йоги, которое органично комбинирует в себе йогу, акробатику, а также элементы тайского массажа. </p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
@@ -194,8 +198,8 @@
         <div class="item k">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <div class="title">Глубокая прокачка пресса, ягодиц, поясницы </div>
+                <p class="text">Фитнес abs — это совокупность упражнений на мышцы брюшного пресса, бедра и ягодицы, поясницу. </p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
