--- a/html/index.html
+++ b/html/index.html
@@ -152,18 +152,9 @@
                 <div class="carouselItem active">
                     <div class="posr carouseItemBox">
                         <div class="carouselText">
-                            <h2 class="title">Я тренер не только для <span>вас</span> но и для <span>себя!</span></h2>
-                            <p>растянулась без чьей либо помощи на своих ощущениях</p>
-                        </div>
-                        <img src="../img/4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="carouselItem">
-                    <div class="posr carouseItemBox">
-                        <div class="carouselText">
                             <h2 class="title">Моя программа способна <span>улучшить</span><br> гибкость любого человека</h2>
                             <p>Разрабатывалась годами и что-то там</p>
-                            <a href="#" class="linkTo">Подробнее</a>
+                            <a href="./training.html" class="linkTo">Подробнее</a>
                         </div>
                         <img src="../img/5.jpg" alt="">
                     </div>
@@ -173,9 +164,18 @@
                         <div class="carouselText">
                             <h2 class="title">Запечатлю ваши <span>эмоции</span> и реализую любую <span>вашу идею</span></h2>
                             <p>Хожу заручку с фотооапаратом и мы с ним лучшие друзья</p>
-                            <a href="#" class="linkTo">Больше информации</a>
+                            <a href="./photograph.html" class="linkTo">Больше информации</a>
                         </div>
                         <img src="../img/3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="carouselItem">
+                    <div class="posr carouseItemBox">
+                        <div class="carouselText">
+                            <h2 class="title">Я тренер не только для <span>вас</span> но и для <span>себя!</span></h2>
+                            <p>растянулась без чьей либо помощи на своих ощущениях</p>
+                        </div>
+                        <img src="../img/4.jpg" alt="">
                     </div>
                 </div>
                 <div class="carouselItem">
