--- a/html/training.html
+++ b/html/training.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Тренировки</title>
 </head>
-<body>
+<body class="training">
     <div class="menu--1">
         <div class="menu cross">
             <label>
@@ -132,7 +132,7 @@
                 <p class="text">Это комплексная физическая нагрузка, включающая упражнения, которые обеспечивают хорошее самочувствие и улучшение физического,
                     умственного и социального благополучия
                 </p>
-                <div class="showPhoto">Подробнее</div>
+                <div class="showPhoto">Хочу здоровую спину</div>
             </div>
             <h2 class="title">
                 Здоровая спина<br/> + стретчинг
@@ -144,7 +144,7 @@
                 <div class="title">Укрепление и подтяжка всего тела </div>
                 <p class="text">Вид силовой тренировки, проходящей в аэробном режиме, целью которой является развитие мышечной силы и создание
                     мышечного рельефа.</p>
-                <div class="showPhoto">Подробнее</div>
+                <div class="showPhoto">Прокачаться</div>
             </div>
             <h2 class="title">
                 Body Sculpt
@@ -156,7 +156,7 @@
                 <div class="title">Растянись и улыбнись!</div>
                 <p class="text">Тренировка направлена на улучшение гибкости и подвижности всего тела.</p>
                 <p class="text mt2"> Растяжка укрепляет и расслабляет мышцы одновременно, снимая ощущение зажатости. Человек с гибким и пластичными телом раскован в движениях и уверен в себе.</p>
-                <div class="showPhoto">Подробнее</div>
+                <div class="showPhoto">Растянуться</div>
             </div>
             <h2 class="title">
                 Растяжка всего тела
@@ -167,10 +167,10 @@
             <div class="extraText">
                 <div class="title">Для начинающих </div>
                 <p class="text">Танец на пилоне или, привычнее, танец на шесте. Со стриптизом, кроме самого шеста, в нем нет ничего общего. </p>
-                <div class="showPhoto">Подробнее</div>
+                <div class="showPhoto">Начать</div>
             </div>
             <h2 class="title">
-                Полденс
+                POLEDANCE
             </h2>
         </div>
         <div class="item e">
@@ -178,7 +178,7 @@
             <div class="extraText">
                 <div class="title">Эффектные парные акробатические элементы</div>
                 <p class="text">Акройога — это направление йоги, которое органично комбинирует в себе йогу, акробатику, а также элементы тайского массажа. </p>
-                <div class="showPhoto">Подробнее</div>
+                <div class="showPhoto">Попробовать</div>
             </div>
             <h2 class="title">
                 Акройога
@@ -188,7 +188,8 @@
             <div class="bgImage"></div>
             <div class="extraText">
                 <div class="title">Суперский текст</div>
-                <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
+                <p class="text">Упражнения стимулируют работу сердца и улучшают циркуляцию крови, помогают организму быстро адаптироваться
+                    к происходящим изменениям.</p>
                 <div class="showPhoto">Подробнее</div>
             </div>
             <h2 class="title">
@@ -199,8 +200,8 @@
             <div class="bgImage"></div>
             <div class="extraText">
                 <div class="title">Глубокая прокачка пресса, ягодиц, поясницы </div>
-                <p class="text">Фитнес abs — это совокупность упражнений на мышцы брюшного пресса, бедра и ягодицы, поясницу. </p>
-                <div class="showPhoto">Подробнее</div>
+                <p class="text">Фитнес ABS — это совокупность упражнений на мышцы брюшного пресса, бедра и ягодицы, поясницу. </p>
+                <div class="showPhoto">Хочу пресс</div>
             </div>
             <h2 class="title">
                 ABS
@@ -211,12 +212,37 @@
             <div class="extraText">
                 <div class="title">Суперский текст</div>
                 <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
-                <div class="showPhoto">Подробнее</div>
+                <div class="showPhoto">Начать</div>
             </div>
             <h2 class="title">
                 Стойки на руках<br/> + Акробатика
             </h2>
         </div>
     </section>
+    <div class="trainingContent">
+        <section class="cont">
+            <div>
+                <h2 class="title">Здоровая спина + <span>стретчинг</span></h2>
+                <div class="textAccent">Тренировки</div>
+                <p>Помогут уменьшить стресс и мышечное напряжение. Стресс является одной из причин
+                    боли в спине. Физическая активность стимулирует выработку эндорфинов, которые улучшают самочувствие и уменьшают боль.
+                </p>
+            </div>
+            <div>
+                <h2 class="title">BODY SCULPT</h2>
+                <div class="textAccent">Тренировки</div>
+                <p>Помогут уменьшить стресс и мышечное напряжение. Стресс является одной из причин
+                    боли в спине. Физическая активность стимулирует выработку эндорфинов, которые улучшают самочувствие и уменьшают боль.
+                </p>
+            </div>
+            <div>
+                <h2 class="title">POLEDANCE</h2>
+                <div class="textAccent">Тренировки</div>
+                <p>Помогут уменьшить стресс и мышечное напряжение. Стресс является одной из причин
+                    боли в спине. Физическая активность стимулирует выработку эндорфинов, которые улучшают самочувствие и уменьшают боль.
+                </p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
