--- a/html/photograph.html
+++ b/html/photograph.html
@@ -201,46 +201,46 @@
         <div class="streetPhoto" id="studio">
             <h2 class="title">Студийная фотосессия</h2>
             <div class="photoBox">
-                <div class="item"><img src="../img/photo/studio/1.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/4.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/11.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/3.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/12.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/7.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/6.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/9.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/10.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/studio/13.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/1.jpg" src="#" data-bigImg="../img/photo/studio/1.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/4.jpg" data-bigImg="../img/photo/studio/4.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/11.jpg" data-bigImg="../img/photo/studio/11.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/3.jpg" data-bigImg="../img/photo/studio/3.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/12.jpg" data-bigImg="../img/photo/studio/12.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/7.jpg" data-bigImg="../img/photo/studio/7.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/6.jpg" data-bigImg="../img/photo/studio/6.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/9.jpg" data-bigImg="../img/photo/studio/9.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/10.jpg" data-bigImg="../img/photo/studio/10.jpg" src="#" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/studio/small/13.jpg" data-bigImg="../img/photo/studio/13.jpg" src="#" alt=""></div>
             </div>
         </div>
         <div class="streetPhoto" id="neon">
             <h2 class="title">Неоновая фотосессия</h2>
             <div class="photoBox">
-                <div class="item"><img src="../img/photo/neon/1.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/2.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/8.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/3.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/6.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/9.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/10.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/4.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/5.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/neon/12.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/1.jpg" src="#" data-bigImg="../img/photo/neon/1.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/2.jpg" src="#" data-bigImg="../img/photo/neon/2.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/8.jpg" src="#" data-bigImg="../img/photo/neon/8.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/3.jpg" src="#" data-bigImg="../img/photo/neon/3.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/6.jpg" src="#" data-bigImg="../img/photo/neon/6.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/9.jpg" src="#" data-bigImg="../img/photo/neon/9.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/10.jpg" src="#" data-bigImg="../img/photo/neon/10.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/4.jpg" src="#" data-bigImg="../img/photo/neon/4.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/5.jpg" src="#" data-bigImg="../img/photo/neon/5.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/neon/small/12.jpg" src="#" data-bigImg="../img/photo/neon/12.jpg" alt=""></div>
             </div>
         </div>
         <div class="streetPhoto" id="street">
             <h2 class="title">Уличная фотосессия</h2>
             <div class="photoBox">
-                <div class="item"><img src="../img/photo/street/1.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/3.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/4.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/15.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/11.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/5.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/6.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/12.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/9.jpg" alt=""></div>
-                <div class="item"><img src="../img/photo/street/я.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/1.jpg" src="#" data-bigImg="../img/photo/street/1.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/3.jpg" src="#" data-bigImg="../img/photo/street/3.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/4.jpg" src="#" data-bigImg="../img/photo/street/4.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/15.jpg" src="#" data-bigImg="../img/photo/street/15.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/11.jpg" src="#" data-bigImg="../img/photo/street/11.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/5.jpg" src="#" data-bigImg="../img/photo/street/5.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/6.jpg" src="#" data-bigImg="../img/photo/street/6.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/12.jpg" src="#" data-bigImg="../img/photo/street/12.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/9.jpg" src="#" data-bigImg="../img/photo/street/9.jpg" alt=""></div>
+                <div class="item"><img data-smallImg="../img/photo/street/small/я.jpg" src="#" data-bigImg="../img/photo/street/я.jpg" alt=""></div>
                 <!--<div class="item"><img src="../img/photo/street/13.jpg" alt=""></div>-->
                 <!--<div class="item"><img src="../img/photo/street/10.jpg" alt=""></div>-->
                 <!--<div class="item"><img src="../img/photo/street/15.jpg" alt=""></div>-->
@@ -250,7 +250,7 @@
     </section>
     <div class="modalPhoto">
         <!--<div class="modalImgBox">-->
-            <img class="modalImg" draggable="true" src="../img/photo/neon/1.jpg" alt="">
+            <img class="modalImg" draggable="true" src="#" alt="">
         <!--</div>-->
     </div>
 </body>
