modile version photo

--- a/html/photograph.html
+++ b/html/photograph.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Фото-портфолио</title>
+    <title>Фото-портфолио Савченко Екатерины</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body id="photograph">
     <div class="menu--1">
@@ -124,7 +125,7 @@
             </ul>
         </nav>
     </div>
-    <div class="linkHome">
+    <div class="linkHome noHome">
         <a href="tel:89990037029" class="phone">8 999 003-70-29</a>
         <a target="_blank" href="https://www.instagram.com/catterino/?hl=ru">
             <svg class="svgInst" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -152,7 +153,7 @@
         <div class="itemPhoto default" data-number="0">
             <div class="smallBox">
                 <div class="contentPhoto">
-                    <h2 class='photoTitle'>УЛИЧНЫЕ ФОТОСЕССИИ</h2>
+                    <h2 class='photoTitle'>УЛИЧНАЯ ФОТОСЕССИЯ</h2>
                     <div class="contentPhotoBody">
                         <p><span class="accentP"> От 50 </span>обработанных фотографий (цвето и свето коррекция, кадрирование)<br/> и <span class="accentP"> 5 </span>
                             выбранных вами фото - детальная ретушь.</p>
@@ -165,11 +166,18 @@
                 </div>
                 <img src="../img/photo/1.jpg" alt="">
             </div>
+            <div class="headerScrollBottom photoScrollBottom">
+                <svg class="arrows" viewBox="0 0 100 100">
+                    <path class="a1" d="M0 0 L50 32 L100 0"></path>
+                    <path class="a2" d="M0 30 L50 62 L100 30"></path>
+                    <path class="a3" d="M0 60 L50 92 L100 60"></path>
+                </svg>
+            </div>
         </div>
         <div class="itemPhoto premium active" data-number="1">
             <div class="smallBox">
                 <div class="contentPhoto">
-                    <h2 class='photoTitle'>СТУДИЙНАЯ ФОТО</h2>
+                    <h2 class='photoTitle'>СТУДИЙНАЯ ФОТОСЕССИЯ</h2>
                     <div class="contentPhotoBody">
                         <p><span class="accentP"> От 50 </span>обработанных фотографий (цвето и свето коррекция, кадрирование)<br/> и <span class="accentP"> 5 </span>
                             выбранных вами фото - детальная ретушь.</p>
@@ -181,11 +189,18 @@
                 </div>
                 <img id="imgPhotoCenter" src="../img/2.jpg" alt="">
             </div>
+            <div class="headerScrollBottom photoScrollBottom">
+                <svg class="arrows" viewBox="0 0 100 100">
+                    <path class="a1" d="M0 0 L50 32 L100 0"></path>
+                    <path class="a2" d="M0 30 L50 62 L100 30"></path>
+                    <path class="a3" d="M0 60 L50 92 L100 60"></path>
+                </svg>
+            </div>
         </div>
         <div class="itemPhoto gold" data-number="2">
             <div class="smallBox">
                 <div class="contentPhoto">
-                    <h2 class='photoTitle'>НЕОНОВАЯ ФОТО</h2>
+                    <h2 class='photoTitle'>НЕОНОВАЯ ФОТОСЕССИЯ</h2>
                     <div class="contentPhotoBody">
                         <p><span class="accentP"> От 50 </span>обработанных фотографий (цвето и свето коррекция, кадрирование)<br/> и <span class="accentP"> 5 </span>
                             выбранных вами фото - детальная ретушь.</p>
@@ -197,6 +212,13 @@
                     </div>
                 </div>
                 <img src="../img/photo/neon/2.jpg" alt="" >
+            </div>
+            <div class="headerScrollBottom photoScrollBottom">
+                <svg class="arrows" viewBox="0 0 100 100">
+                    <path class="a1" d="M0 0 L50 32 L100 0"></path>
+                    <path class="a2" d="M0 30 L50 62 L100 30"></path>
+                    <path class="a3" d="M0 60 L50 92 L100 60"></path>
+                </svg>
             </div>
         </div>
     </section>
