--- a/html/training.html
+++ b/html/training.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Тренировки</title>
+    <title>Тренировки с Савченко Екатериной</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="training">
     <div class="menu--1">
